--- a/apps/ryoc_web/package.json
+++ b/apps/ryoc_web/package.json
@@ -9,6 +9,9 @@
     "phoenix_html": "file:../../deps/phoenix_html"
   },
   "devDependencies": {
-    "webpack": "^2.2.0"
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-env": "1.1.6",
+    "webpack": "2.2.0"
   }
 }
