--- a/apps/ryoc_web/package.json
+++ b/apps/ryoc_web/package.json
@@ -6,12 +6,15 @@
   },
   "dependencies": {
     "phoenix": "file:../../deps/phoenix",
-    "phoenix_html": "file:../../deps/phoenix_html"
+    "phoenix_html": "file:../../deps/phoenix_html",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-core": "6.22.1",
     "babel-loader": "6.2.10",
     "babel-preset-env": "1.1.6",
+    "babel-preset-react": "^6.22.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "image-webpack-loader": "^3.1.0",
